--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,11 +2,14 @@
   <div class="row">
 
     <ul class="nav nav-pills nav-pills-center">
-      <li role="presentation" class="active">
+      <li role="presentation">
         <%= link_to "全部餐廳", root_path %>
       </li>
+      <!-- 這邊判斷category==@category的時候要加 li.active -->
       <% @categories.each do |category| %>
-        <li role="presentation"><%= link_to category.name, category_path(category) %></li>
+        <li role="presentation" class="<%= "active" if category == @category %>">
+          <%= link_to category.name, category_path(category) %>
+        </li>
       <% end %>
     </ul>
 
