--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -23,6 +23,7 @@
     <div class="clearfix"></div>
 
     <hr>
+
     <div class="container">
       <div class="row">
        <%= form_for [@restaurant, @comment] do |f| %>
@@ -36,5 +37,17 @@
       <% end %>
       </div>
     </div>
+
+    <!-- 顯示與餐廳相關的評論 -->
+        <% @restaurant.comments.each do |comment| %>
+        <div>
+          <h4><%= comment.user.email.split("@")[0] %></h4>
+          <p><%= simple_format comment.content %></p>
+          <p class="text-muted">
+            <em><%= time_ago_in_words(comment.created_at) %> </em>
+          </p>
+        </div>
+        <hr>
+        <% end %>
   </div>
 </div>
