--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
           <h2><%= @user.name %></h2>
           <p><strong><%= @user.email %></strong></p>
           <div><%= simple_format @user.intro %></div>
-          <% if @user.email == current_user.email %>
+          <% if @user.id == current_user.id %>
             <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
           <% end %>
         </div>
