--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :avatar, "Avatar" %>
+        <!-- <%= f.label :avatar, "Avatar" %> -->
         <%= image_tag @user.avatar, width: '300px' if @user.avatar? %>
         <%= f.file_field :avatar %>
       </div>
