--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,12 +9,12 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :intro, "Intro" %>
+        <%= f.label :intro, "自我介紹" %>
         <%= f.text_area :intro, class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <!-- <%= f.label :avatar, "Avatar" %> -->
+        <%= f.label :avatar, "大頭照上傳" %>
         <%= image_tag @user.avatar, width: '300px' if @user.avatar? %>
         <%= f.file_field :avatar %>
       </div>
