--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,9 +20,10 @@
       <%= simple_format @restaurant.description %>
       <hr>
       <%= link_to 'Dashboard', dashboard_restaurant_path(@restaurant), class: "btn btn-primary" %>
-
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
 
+      <%= link_to 'like', like_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
+      <%= link_to 'unlike', unlike_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
     </div>
 
     <div class="clearfix"></div>
