--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,9 +21,11 @@
       <hr>
       <%= link_to 'Dashboard', dashboard_restaurant_path(@restaurant), class: "btn btn-primary" %>
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
-
-      <%= link_to 'like', like_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
-      <%= link_to 'unlike', unlike_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
+      <% if current_user.like?(@restaurant) %>
+        <%= link_to 'unlike', unlike_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
+      <% else %>
+        <%= link_to 'like', like_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
+      <% end %>
     </div>
 
     <div class="clearfix"></div>
