count favorites size in favorite/unfavorite action, and user can view top 10 favorited on ranking page

--- a/app/views/shared/_favorite.html.erb
+++ b/app/views/shared/_favorite.html.erb
@@ -3,3 +3,4 @@
 <% else %>
   <%= link_to 'Favorite', favorite_restaurant_path(restaurant), method: :post, class: "btn btn-primary" %>
 <% end %>
+<span>收藏數：<%= restaurant.favorites_count %></span>
