--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-12">
       <h1><%= @restaurant.name %></h1>
       <p>[<%= @restaurant.category.name %>]</p>
+
     </div>
 
     <div class="col-md-4">
@@ -22,8 +23,7 @@
       <%= link_to 'Dashboard', dashboard_restaurant_path(@restaurant), class: "btn btn-primary" %>
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
       <%= render partial: "shared/like", locals: {restaurant: @restaurant} %>
-
-
+      <span>收藏數：<%= @restaurant.favorites_count %></span>
     </div>
 
     <div class="clearfix"></div>
