--- a/app/views/restaurants/ranking.html.erb
+++ b/app/views/restaurants/ranking.html.erb
@@ -15,9 +15,12 @@
         <% end %>
       </div>
       <div class="col-md-8">
-        <h3><%= restaurant.name %></h3>
+        <h3>
+          <%= restaurant.name %>
+          <span class="label label-default">收藏數：<%= restaurant.favorites_count %></span>
+        </h3>
         <p class="label label-default"><%= restaurant.category.name %><p>
-        <p><%= truncate(restaurant.description, length: 80) %></p>
+        <p><%= truncate(restaurant.description, length: 200) %></p>
         <%= link_to 'Show', restaurant_path(restaurant), class: "btn btn-primary" %>
         <%= render partial: "shared/favorite", locals: {restaurant: restaurant} %>
       </div>
