--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1><%= @restaurant.name %></h1>
+      <h1>
+        <%= @restaurant.name %>
+        <span class="label label-default">收藏數：<%= @restaurant.favorites_count %></span>
+      </h1>
       <p>[<%= @restaurant.category.name %>]</p>
 
     </div>
@@ -23,7 +26,6 @@
       <%= link_to 'Dashboard', dashboard_restaurant_path(@restaurant), class: "btn btn-primary" %>
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
       <%= render partial: "shared/like", locals: {restaurant: @restaurant} %>
-      <span>收藏數：<%= @restaurant.favorites_count %></span>
     </div>
 
     <div class="clearfix"></div>
