--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,21 @@
 <div class="container">
-  <ul>
-    <% @users.each do |user| %>
-      <li>
-        <%= user.name %>
-        <%= render partial: "shared/follow", locals: {user: user} %>
-      </li>
-    <% end %>
+  <ul class="nav nav-tabs">
+    <li role="presentation"><%= link_to "首頁", root_path %></li>
+    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+    <li role="presentation"><%= link_to "Top 10人氣排行", ranking_restaurants_path %></li>
+    <li role="presentation" class="active"><%= link_to "美食達人", users_path %></li>
   </ul>
+  <h1>美食達人</h1>
+  <% @users.each do |user| %>
+    <div class="col-md-3 col-sm-4 col-xs-6 text-center user-item">
+      <%= link_to user_path(user) do %>
+          <!-- 可先利用 Placeholder 如 <img src="http://via.placeholder.com/128x128"> 產生圖片 -->
+          <%= image_tag(user.avatar, class: "img-rounded") %>
+          <h4><%= user.name %></h4>
+        <% end %>
+      <div class="caption">
+        <%= render partial: "shared/follow", locals: {user: user} %>
+      </div>
+    </div>
+  <% end %>
 </div>
