--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,13 @@
         <div class="col-md-9 col-sm-8">
           <h2><%= @user.name %></h2>
           <p><strong><%= @user.email %></strong></p>
+          <!-- inline & unstyled 的 list -->
+          <ul class="list-unstyled list-inline">
+            <li><strong><%= @commented_restaurants.count %></strong> 已評論餐廳</li>
+            <li><strong><%= @favorited_restaurants.count %></strong> 收藏的餐廳</li>
+            <li><strong><%= @followings.count %></strong> followings</li>
+            <li><strong><%= @followers.count %></strong> followers</li>
+          </ul>
           <div><%= simple_format @user.intro %></div>
           <% if @user.id == current_user.id %>
             <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
@@ -25,19 +32,67 @@
       <br>
     </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title"><%= @commented_restaurants.count %>評論過的餐廳</h3>
-    </div>
-    <div class="panel-body">
-      <% @commented_restaurants.each do |restaurant|  %>
-        <%= link_to(restaurant_path(restaurant)) do %>
-          <div class="my-restaurant">
-            <%= image_tag restaurant.image, class: "img-responsive center-block" %>
-            <h3><%= restaurant.name %></h3>
-          </div>
+  <div class="row">
+    <div class="col-md-3 sidebar">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= @followings.count %> followings</h3>
+      </div>
+      <ul class="list-group">
+        <% @followings.each do |following| %>
+          <li class="list-group-item">
+            <%= link_to user_path(following) do %>
+              <!-- <%= image_tag(following.avatar, height: 30, width: 30, class: "img-circle") %> -->
+              <%= image_tag(following.avatar, height: 30, width: 30, class: "img-circle" ) %>
+              <%= following.name %>
+            <% end %>
+          </ii>
         <% end %>
-      <%end%>
+      </ul>
+
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= @followers.count %> followers</h3>
+      </div>
+      <ul class="list-group">
+        <% @followers.each do |follower| %>
+          <li class="list-group-item">
+            <%= link_to user_path(follower) do %>
+              <%= image_tag(follower.avatar, height: 30, width: 30, class: "img-circle" ) %>
+              <%= follower.name %>
+            <% end %>
+          </ii>
+        <% end %>
+      </ul>
     </div>
-  </div>
+    <div class="col-md-9">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><%= @commented_restaurants.count %>評論過的餐廳</h3>
+        </div>
+        <div class="panel-body">
+          <% @commented_restaurants.each do |restaurant|  %>
+            <%= link_to(restaurant_path(restaurant)) do %>
+              <div class="my-restaurant">
+                <%= image_tag restaurant.image, class: "img-responsive center-block" %>
+                <h3><%= restaurant.name %></h3>
+              </div>
+            <% end %>
+          <%end%>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><%= @favorited_restaurants.count %>收藏的餐廳</h3>
+        </div>
+        <div class="panel-body">
+          <% @favorited_restaurants.each do |restaurant|  %>
+            <%= link_to(restaurant_path(restaurant)) do %>
+              <div class="my-restaurant">
+                <%= image_tag restaurant.image, class: "img-responsive center-block" %>
+                <h3><%= restaurant.name %></h3>
+              </div>
+            <% end %>
+          <%end%>
+        </div>
+      </div>
+    </div>
 </div>
