--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,7 @@
           <% if @user.id == current_user.id %>
             <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary" %>
           <% end %>
+          <%= link_to 'Friend_list', friend_list_user_path(@user), class: "btn btn-primary" %>
         </div>
         <div class="clearfix"></div>
       </div>
